[refactor] Other localization